# AI-Reliability-Engineer

./: .dockerignore  .env.example  .gitignore  EXTERNAL_REQUIREMENTS.md  QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md  UPDATE_LOG.md  docker-compose.yml  pyproject.toml  requirements.txt  service-account-key.json
AIRE/: __init__.py
AIRE/Apps/: Dockerfile.apps  coding_agent.py  customer_support_agent.py  enterprise_agent.py  otel_setup.py  research_agent.py
AIRE/agents/: agent_orchestrator.py  cost_agent.py  gemini_client.py  recommendation_agent.py  reliability_agent.py  root_cause_agent.py
AIRE/dashboard/: index.html  package-lock.json  package.json
AIRE/dashboard/src/: style.css
AIRE/dashboard/src/components/: AgentComparison.jsx  App.jsx  CostInsights.jsx  Dashboard.jsx  Recommendations.jsx  ReliabilityScore.jsx  RootCausePanel.jsx
AIRE/deploy/: agent_runtime.py  cloud_run_service.yaml  cloudbuild.yaml  deploy.sh  k8s_deployment.yaml
AIRE/knowledge/: agent_search.py  datastore_client.py  document_loader.py  embeddings.py  rag_pipeline.py
AIRE/knowledge/docs/: ai_best_practices.md  reliability_playbooks.md
AIRE/observability/: dynatrace_client.py  dynatrace_config.yaml  metric_collector.py  otel_exporter.py  trace_collector.py
AIRE/safety/: action_validator.py  safety_config.py  safety_rules.yaml
AIRE/scripts/: generate_telemetry.py  reset_env.sh  seed_demo_data.py
AIRE/security/: .env.example  credentials.py  secret_manager.py
AIRE/services/: Dockerfile  __init__.py  cost_analyzer.py  main.py  optimization_calc.py  recommendation_api.py  reliability_scorer.py
AIRE/telemetry_pipeline/: bindplane_config.yaml
telemetry_pipeline/: otel_collector.yaml  routing_rules.py  transform_rules.py
