[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aire"
version = "1.0.0"
description = "AIRE — AI Agent Reliability Engineer powered by Dynatrace + Gemini on Google Cloud"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["ai", "reliability", "observability", "gemini", "dynatrace", "google-cloud"]
authors = [{ name = "AIRE Team" }]

dependencies = [
    "google-cloud-secret-manager>=2.20,<3.0",
    "google-cloud-aiplatform>=1.60,<2.0",
    "google-cloud-discoveryengine>=0.13,<1.0",
    "google-cloud-storage>=2.16,<3.0",
    "google-auth>=2.29,<3.0",
    "vertexai>=1.60,<2.0",
    "google-generativeai>=0.8,<1.0",
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "httpx>=0.27,<1.0",
    "numpy>=1.26,<2.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "tenacity>=8.3,<9.0",
    "structlog>=24.0,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aire*", "knowledge*", "services*", "security*", "deploy*", "safety*", "agents*", "observability*", "apps*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
